# Movie-Rating

./: README.md
.github/workflows/: django.yml
Kivy-App/: main.kv  main.py
config/: .gitignore  Dockerfile  README.md  db.sqlite3  pyproject.toml  requirements.txt
config/api/: serializers.py  urls.py  views.py
config/api/tests/: test_endpoints.py
config/config/: settings.py
config/movie_review/: admin.py  apps.py  models.py
config/movie_review/migrations/: 0001_initial.py  0002_review.py  0003_review_review_remove_movie_countries_movie_countries.py  0004_profile.py  0005_alter_review_unique_together.py
